--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="game-container">
-    <h1>Uma Proposta Cheia de Memes</h1>
+    <h1>Um jogo para testar o casal </h1>
     <div id="game-text"></div>
     <div id="choices"></div>
   </div>
